--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "lint": "eslint .",
-    "dev": "npm run dev --workspace quest-frontend"
+    "dev": "npm run dev --workspace quest-frontend",
+    "start": "npm start --workspace express-backend"
 
   },
   "repository": {
