--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "lint": "eslint .",
+    "lint": "npx eslint . && npx prettier --check .",
     "dev": "npm run dev --workspace quest-frontend",
     "start": "npm start --workspace express-backend"
 
