--- a/.github/workflows/ci.testing.yml
+++ b/.github/workflows/ci.testing.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 20.17.0
       - run: npm ci
+      - run: npm start -w express-backend build
       - run: npm run -w express-backend lint
       - run: npm run -w quest-frontend lint
       - run: npm run -w quest-frontend build
