--- a/.github/workflows/main_questlogger.yml
+++ b/.github/workflows/main_questlogger.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install
+      - name: npm install,build,test
         run: |
           npm install --workspaces=false
-          working-directory: packages/express-backend
+        working-directory: packages/express-backend
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
