--- a/.github/workflows/main_questlogger.yml
+++ b/.github/workflows/main_questlogger.yml
@@ -30,8 +30,7 @@ jobs:
         working-directory: packages/express-backend
           
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-        working-directory: packages/express-backend
+        run: zip packages/express-backend/release.zip ./* -r
         
   deploy:
     runs-on: ubuntu-latest
