--- a/.github/workflows/main_questlogger.yml
+++ b/.github/workflows/main_questlogger.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: packages/express-backend/release.zip
           
       - name: npm install,build,test
         run: |
@@ -30,7 +30,8 @@ jobs:
         working-directory: packages/express-backend
           
       - name: Zip artifact for deployment
-        run: zip packages/express-backend/release.zip ./* -r
+        run: zip release.zip ./* -r
+        working-directory: packages/express-backend
         
   deploy:
     runs-on: ubuntu-latest
